--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "web_kit_ui": "file:../web_kit_ui/dist",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "next": "15.1.0"
